# newsletter_api

./: Cargo.toml  Dockerfile  newsletter  sqlx-data.json
configuration/: production.yaml
migrations/: 20220504193949_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
