[package]
name = "newsletter_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_api"

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.137", features = ["derive"] }
tokio = {version = "1.18.1", features =["macros","rt-multi-thread"]}
config = "0.13.1"
chrono = "0.4.19"
uuid = { version = "0.8.1", features = ["v4"] }
# env_logger = "0.9.0"
# log = "0.4.17"
tracing = { version = "0.1.34", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
once_cell = "1"
secrecy = {version= "0.8", features= ["serde"]}

[dev-dependencies]
reqwest = "0.11"

[dependencies.sqlx]
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
